# Bluresp32

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: config.rs  main.rs  protocol.rs
src/ble/: gatt_server.rs  heartbeat.rs  mod.rs
src/receipt/: buffer.rs  framer.rs  mod.rs
src/usb/: mod.rs  printer_class.rs
tests/features/: ble_transfer.feature  configuration.feature  heartbeat.feature  receipt_framing.feature  usb_ingestion.feature
